--- a/src/sass/_menupage.scss
+++ b/src/sass/_menupage.scss
@@ -100,7 +100,7 @@
     overflow: hidden;
     height: 70px;
     max-width: 100%;
-    /*padding: 10px;*/
+    justify-content: space-between;
     display: flex;
     align-items: center;
     cursor: pointer;
