--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ footer {
   overflow: hidden;
   height: 70px;
   max-width: 100%;
-  /*padding: 10px;*/
+  justify-content: space-between;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -497,6 +497,9 @@ header {
     height: 60px;
     width: 350px; }
 
+  .content__description {
+    overflow: visible; }
+
   footer h2 {
     font-size: 30px;
     padding: 0 0 18px 35px; }
@@ -526,6 +529,9 @@ header {
 
   .restaurants h2 {
     padding-right: 570px; }
+
+  .content__prix {
+    margin-left: 330px; }
 
   footer {
     padding: 10px 30px; } }
